Fix display on mobile

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -88,8 +88,16 @@
 
 /* Mobile */
 @media (max-width: 700px) {
+  .main {
+    padding: 4rem;
+  }
+
   .content {
     grid-template-columns: 1fr;
+  }
+
+  .header {
+    padding: 1rem 0;
   }
 }
 
